Revision history for {{$dist->name}}

{{$NEXT}}

0.65      2014-08-06 06:09:04Z
 - re-release to remove README.pod from shipped dist

0.64      2014-08-02 17:35:20Z
 - bump required version of Getopt::Long::Descriptive to avoid an infinite
   loop problem (thanks, Bram!)

0.63      2014-03-25 16:37:58Z
 - fix test prereq on Test::Warnings (thanks, omega!)

0.62      2014-03-07 05:44:01Z
 - fix test that assumes option parsing is case-insensitive, which is no
   longer true with Getopt::Long::Descriptive 0.097

0.61      2014-02-11 06:30:14Z
 - fix potentially-broken check-breaks test when a conflicting module fails to
   compile

0.60      2014-02-10 02:21:05Z
 - avoid failing an optional test when YAML is not installed

0.59      2013-11-30 19:02:01Z
 - re-release to fix compile test

0.58      2013-09-13 16:57:41Z
 - remove use of deprecated $Config::Any::YAML::NO_YAML_XS_WARNING in tests
 - warnings tests bypassed during installation
 - author metadata moved to contributors

0.57      2013-09-07 21:29:05Z
 - spelling fixes (RT#87780, David Steinbrunner)
 - removed use of deprecated Class::MOP::load_class
 - repository migrated from shadowcat to the github moose organization

0.56      2013-02-15 21:13:18Z
 - depend on newest Path::Tiny, to regain 5.8.x compatibility (gone since
   v0.52)

0.55      2013-02-12 18:02:55Z
 - fix broken tests on win32 with file comparisons

0.54      2013-02-10 00:25:32Z
 - fix broken tests on win32 with file comparisons
 - allow configfiles called "0"
 - support more mechanisms for overriding default configfile
 - when using in conjunction with MooseX::ConfigFromFile, configfile value now
   properly passed to new()

0.53      2013-02-05 17:59:00Z
 - properly indicate optional dependency in tests using
   MooseX::ConfigFromFile

0.52      2013-02-03 03:01:25Z
 - tests converted from using Path::Class to Path::Tiny

0.51      2013-01-27 17:38:11Z
 - missing test prereqs now declared (thanks for the automated reports, David